--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --darker: #020300;
   --light: #f2f2f2;
 
-  --brand-1: #616ee0;
+  --brand-1: #7682ee;
   --brand-2: #c2c8ff;
 
   --neutral: #f4eea9;
